Thu Dec 05 23:28:29 GMT 2002  Olly Betts <olly@survex.com>

	* include/om/omdatabase.h: Added missing "std::".

Thu Dec 05 23:27:57 GMT 2002  Olly Betts <olly@survex.com>

	* docs/remote.html: Updated from OmSettings to factory functions.

Thu Dec 05 23:26:42 GMT 2002  Olly Betts <olly@survex.com>

	* PLATFORMS: ixion is actually Linux 2.2.

Thu Dec 05 04:32:40 GMT 2002  Olly Betts <olly@survex.com>

	* testsuite/backendmanager.cc: Fixed BackendManager::do_getdb_quartz()
	  and do_getwritedb_quartz() to work correctly and so resolved some
	  test failures.

Wed Dec 04 03:35:12 GMT 2002  Olly Betts <olly@survex.com>

	* api/omdatabaseinternal.cc,backends/quartz/,docs/todo.xml,
	  include/om/omdatabase.h: Replace create and allow_overwrite
	  boolean flags with OM_DB_XXX constants.  And we now support
	  OM_DB_CREATE_OR_OPEN which is a common action to want to
	  perform, but was fiddly to achieve before.

Tue Dec 03 23:59:30 GMT 2002  Olly Betts <olly@survex.com>

	* docs/todo.xml: Updated.

Tue Dec 03 23:26:27 GMT 2002  Olly Betts <olly@survex.com>

	* api/omenquire.cc,backends/quartz/quartz_postlist.h,common/,
	  docs/omsettings,docs/todo.xml,include/om/omenquire.h,matcher/,
	  net/socketcommon.cc,net/socketserver.cc,tests/api_db.cc,
	  tests/api_posdb.cc: Weighting schemes are now specified by passing
	  in a weighting object, rather than via OmSetttings.  The weight
	  class can be sub-classed by the library user to allow them to
	  specify their own weighting scheme).  Everything works apart
	  from the remote backend where the weighting scheme type and
	  parameters aren't passed across the link.

Mon Dec 02 20:12:31 GMT 2002  Olly Betts <olly@survex.com>

	* NEWS: Updated with changes since 0.6.1.

Mon Dec 02 19:44:37 GMT 2002  Olly Betts <olly@survex.com>

	* api/ompostlistiterator.cc,backends/multi/multi_postlist.h,
	  common/irweight.h,common/leafpostlist.h,matcher/: IRWeight
	  renamed to OmWeight in preparation for making it externally
	  visible.
